impact-whitespace-fix

--- a/src/ImpactFullPg/ImpactFullPg.css
+++ b/src/ImpactFullPg/ImpactFullPg.css
@@ -86,7 +86,7 @@
 
 @media screen and (min-width: 765px) {
     .impact-page {
-        height: 300%;
+        height: 400%;
     }
 
     .impact-full {
@@ -106,28 +106,81 @@
     } 
 
     .solution-h3 {
-        display: none;
+        display: none; 
     }
 
     .solution-button {
         display: block;
-        margin-left: 175px;
-
+        margin-left: 20%;
     }
 
     .impact-list {
         justify-content: flex-end;
-        width: 45%;
+        width: 36%;
         height: 20%;
-        padding-top: 200px; 
+        padding-top: 150px; 
         margin-left: 50px;
         margin-right: 50px;
-        margin-top: 100px;
+        margin-top: 160px;
     }
 
     .main-list {
-        height: 400px;
-        padding-top: 100px;
+        height: 525px;
+        padding-top: 10px;
         margin-top: 600px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .impact-page {
+        height: 300%;
+    }
+
+    .solution-button {
+        display: block;
+        margin-left: 35%;
+    }
+
+    .impact-list {
+        justify-content: flex-end;
+        width: 40%;
+        height: 20%;
+        padding-top: 150px; 
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 160px;
+    }
+
+    .main-list {
+        height: 350px;
+        padding-top: 10px;
+        margin-top: 600px;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .impact-page {
+        height: 225%;
+    }
+
+    .solution-button {
+        display: block;
+        margin-left: 35%;
+    }
+
+    .impact-list {
+        justify-content: flex-end;
+        width: 40%;
+        height: 20%;
+        padding-top: 150px; 
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 160px;
+    }
+
+    .main-list {
+        height: 250px;
+        padding-top: 10px;
+        margin-top: 500px;
     }
 }
